# ESP32DataLogger

./: .gitignore  README.md
.github/: CODEOWNERS
Baja_DAQ_3.0/Master_Node/: .gitignore  README.md  nodes_config.json  platformio.ini  sdkconfig.Master  sdkconfig.defaults
Baja_DAQ_3.0/Master_Node/src/: CMakeLists.txt  README.md  gps.c  gps.h  main.c  master_control.h  rpm_sampler.c  rpm_sampler.h
Baja_DAQ_3.0/Master_Node/src/can/: can_master.c  can_master.h
Baja_DAQ_3.0/Master_Node/src/console/: serial_console.c  serial_console.h
Baja_DAQ_3.0/Master_Node/src/logger/: data_logger.c  data_logger.h
Baja_DAQ_3.0/Master_Node/src/node_state/: node_registry.c  node_registry.h
Baja_DAQ_3.0/Master_Node/src/protocol/: app_protocol.h
Baja_DAQ_3.0/Master_Node/src/storage/: sd_card.c  sd_card.h
Baja_DAQ_3.0/Master_Node/src/time/: time_beacon.c  time_beacon.h
Baja_DAQ_3.0/Sensor_Node/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.NodeStable
Baja_DAQ_3.0/Sensor_Node/src/: CMakeLists.txt  README.md  main.c
Baja_DAQ_3.0/Sensor_Node/src/can/: can_node.c  can_node.h
Baja_DAQ_3.0/Sensor_Node/src/protocol/: app_protocol.h
Baja_DAQ_3.0/Sensor_Node/src/sampler/: sampler.c  sampler.h
Baja_DAQ_3.0/Sensor_Node/src/sensors/: adc_input.c  adc_input.h  bearing_encoder.c  engine_rpm.c  front_brake.c  generic_adc.c  rear_brake.c  sensor.h  sensor_registry.c
Baja_DAQ_3.0/Sensor_Node/src/time/: time_sync.c  time_sync.h
ESP32 Datalogger V1.0/ESP32_Datalogging_code/: ESP32_Datalogging_code.ino
ESP32_Datalogging_code/: ESP32_Datalogging_code.ino
(+197 files in other folders)
